# brawl_bot

./: .gitignore  .nojekyll  LICENSE  README.md  architecture.html  capture.html  detection.html  index.html  inputs.html  pipeline.html  pyproject.toml  requirements.txt  rl.html  roadmap.html  search.json  state.html
.github/workflows/: publish.yml
configs/: detection.yaml
docs/: _quarto.yml  architecture.qmd  capture.qmd  custom.css  design.md  detection.qmd  index.qmd  inputs.qmd  pipeline.qmd  rl.qmd  roadmap.qmd  state.qmd
site_libs/bootstrap/: bootstrap-25c6cdf008bd2ccd9fae0e74d50fbfae.min.css  bootstrap-3933abb7470050122afa795de693b773.min.css
src/BROWT/detection/: README.md  __init__.py  dataset.py  detector.py  report.py  train.py  visualize.py
src/brawl_bot/: __init__.py
src/brawl_bot/capture/: __init__.py
