[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "BROWT"
version = "0.1.0"
description = "Brawl Stars bot trained with reinforcement learning"
requires-python = ">=3.11,<3.13"
dependencies = [
    "ultralytics",
    "opencv-python",
    "numpy",
    "pyyaml",
    "mss",
]

[project.optional-dependencies]
rl = [
    "torch",
    "stable-baselines3",
    "gymnasium",
    "tensorboard",
]
adb = [
    "pure-python-adb",
]

[tool.setuptools.packages.find]
where = ["src"]
